# graphdener-backend

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md  test.txt
benches/: fileread.rs
graphdener-backend/: Cargo.toml
graphdener-backend/src/: commands.rs  commandsold.rs  datastore.old  datastore.rs  datastoremode.rs  endpoints.old  main.rs  server.rs  statics.rs
graphdener-backend/src/alg/: barycenterordering.rs  circular.rs  forcedirected.rs  mod.rs
graphdener-backend/src/commands/: calcs.rs  database.rs  initials.rs  mod.rs  retrievals.rs
graphdener-backend/src/containers/: graph.rs  mod.rs  nodes.rs
graphdener-backend/src/graph/: graph.rs  nodes.rs
graphdener-backend/src/io/: filehandling.rs  importer.rs  mod.rs  relational.rs  relations.rs
graphdener-backend/src/models/: graph.rs
graphdener-lib/: Cargo.toml
graphdener-lib/src/: lib.rs  statics.rs  traits.rs
graphdener-lib/src/alg/: aggregate.rs  barycenterordering.rs  forcedirected-new.rs  forcedirected.rs  mod.rs  random.rs
graphdener-lib/src/commands/: calcs.rs  database.rs  distribute.rs  initials.rs  mod.rs  retrievals.rs
graphdener-lib/src/io/: filehandling.rs  importer.rs  mod.rs  pattern.rs
graphdener-lib/src/models/: graph.rs  nodes.rs
graphdenerdb-lib/: Cargo.toml
graphdenerdb-lib/src/: traits.rs
graphdenerdb-lib/src/memory/: datastore.rs
graphdenerdb-lib/src/models/: edges.rs  vertices.rs
indradb-lib/src/models/: types.rs
lib/: Cargo.toml
lib/src/: lib.rs  traits.rs
lib/src/memory/: datastore.rs
lib/src/models/: mod.rs  queries.rs  spatial.rs  types.rs  vertices.rs
lib/src/rdb/: datastore.rs
pypipe/: Cargo.toml
pypipe/src/: lib.rs  main.py
