[package]
name = "graphdener-backend"
version = "0.1.0"
authors = ["moreorem <moreorem@github.com>"]
repository = "https://github.com/moreorem/graphdener-backend"
license = "MIT"

[dependencies.indradb-lib]
path = "../lib"
version = "0.15.0"

[dependencies]
time = "0.1"
regex = "1.0.0"
rmp-rpc = "0.2.0"
futures = "0.1.21"
tokio-core = "0.1.17"
uuid = { version = ">=0.5,<0.6", features = ["serde", "v1"] }
lazy_static = "^1.0.0"
serde_json = "1.0.24"


