[package]
name = "graphdener-backend"
version = "0.1.0"
authors = ["moreorem <moreorem@github.com>"]
repository = "https://github.com/moreorem/graphdener-backend"
license = "MIT"

[dependencies.graphdener-lib]
path = "../graphdener-lib"
version = "0.15.0"

[dependencies.graphdenerdb-lib]
path = "../graphdenerdb-lib"
version = "0.15.0"

[dependencies]
time = "0.1"
rmp-rpc = "0.2.0"
futures = "0.1.21"
tokio-core = "0.1.17"



