[package]
name = "graphdener-lib"
version = "0.15.0"
authors = ["Orestes <o.moresis@outlook.com>"]
description = "A graph database library"
homepage = ""
repository = "https://github.com/moreorem/graphdener-lib"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]
license = "MPL-2.0"

[badges]
travis-ci = { repository = "graphdener/graphdener", branch = "master" }

[lib]
name = "graphdener"
path = "src/lib.rs"

[dependencies.indradb-lib]
path = "../indradb-lib"
version = "0.15.0"

[features]
default = []
test-suite = []

[dependencies]
regex = "1.0.2"
uuid = { version = "~0.7.1", features = ["serde", "v1"] }
rand = "0.5.5"
rmp-rpc = "0.2.0"
lazy_static = "^1.0.0"
serde_json = "1.0.24"
arrayfire = "3.3.0"

