[package]
name = "graphdenerdb-lib"
version = "0.15.0"
authors = ["Orestes <o.moresis@outlook.com>"]
description = "A graph database library"
homepage = ""
repository = "https://github.com/moreorem/graphdener-lib"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]
license = "MPL-2.0"

[badges]
travis-ci = { repository = "graphdener/graphdener", branch = "master" }

[lib]
name = "graphdenerdb"
path = "src/lib.rs"

[features]
default = []
test-suite = []
bench-suite = []

[dependencies]
error-chain = "~0.11.0"
rust-crypto = "~0.2.36"
serde = "^1.0.27"
serde_json = "^1.0.9"
serde_derive = "^1.0.27"
libc = "0.2.26"
rand = "~0.4.2"
regex = "~0.2.5"
lazy_static = "^1.0.0"
byteorder = "^1.2.1"
chrono = { version = "0.4.0", features = ["serde"] }
uuid = { version = ">=0.5,<0.6", features = ["serde", "v1"] }
